<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_aprova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aprova_certo"
        android:textSize="32sp"
        android:textColor="#0000ff"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:layout_below="@+id/text_aprova"
        android:layout_marginTop="64dp"
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@color/white"
        android:padding="5dp"
        />
    <EditText
        android:id="@+id/edit_password"
        android:layout_below="@+id/edit_email"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@color/white"
        android:padding="5dp"
        />
    <Button
        android:id="@+id/button_login"
        android:layout_below="@+id/edit_password"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background_color"
        android:text="@string/login"
        android:textAllCaps="true"
        android:backgroundTint="@color/background_color_button"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:text="@string/ainda_n_o_cadastrado_cadastre_se"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/image_question"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_contact_support_24"
        android:layout_alignParentBottom="true"
        />
    <TextView
        android:id="@+id/text_question"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/esqueceu_sua_senha"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:layout_toEndOf="@id/image_question"
        android:textSize="16sp"
        />


</RelativeLayout>